--- a/.github/workflows/dynamic.yml
+++ b/.github/workflows/dynamic.yml
@@ -1,1 +1,24 @@
-bbbbbbbb
+name: Dynamic - Workflow
+
+on: [push]
+
+env:
+  ROM: MIUI
+  ZIP: MIUI-RN5Pro
+  TYPE: build
+  ROM_LINK: https://dl.google.com/developers/android/rvc/images/factory/coral-rpb3.200720.005-factory-13069eef.zip
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+       - name: Checkout
+         uses: actions/checkout@master
+         
+       - name: Set up python
+         uses: actions/setup-python@v2
+         with:
+           python-version: '3.8.2'
+
+       - name: Start Shell Script
+         run: sudo ./start.sh https://oxygenos.oneplus.net/OnePlus7TOxygen_14.O.13_OTA_013_all_2005192145_5ecebc1d9bde4987.zip
