--- a/.github/workflows/dynamic.yml
+++ b/.github/workflows/dynamic.yml
@@ -21,4 +21,4 @@ jobs:
            python-version: '3.8.2'
 
        - name: Start Shell Script
-         run: sudo ./start.sh https://oxygenos.oneplus.net/OnePlus7TOxygen_14.O.13_OTA_013_all_2005192145_5ecebc1d9bde4987.zip
+         run: sudo ./dynamic.sh
