--- a/.github/workflows/dynamic.yml
+++ b/.github/workflows/dynamic.yml
@@ -19,6 +19,9 @@ jobs:
          uses: actions/setup-python@v2
          with:
            python-version: '3.8.2'
-
+         
+       - name: Start Shell Script
+         run: ls
+         
        - name: Start Shell Script
          run: sudo ./dynamic.sh
